fix download menu behind next entry

--- a/src/main/webapp/resources/css/structure.css
+++ b/src/main/webapp/resources/css/structure.css
@@ -375,7 +375,7 @@ div.ui-state-focus span.ui-chkbox-icon {outline: -webkit-focus-ring-color auto 5
 #dataverse-info-dropdown .dataverse-info-general {float:left; width:300px;}
 
 .button-block {margin-top:1em;}
-#datasetForm .button-block {margin-top:1em;z-index:500;position:relative;}
+#datasetForm .button-block:not(.col-file-action) {margin-top:1em;z-index:500;position:relative;}
 .button-block .btn {position:relative;}
 .form-group > .button-block, 
 .panel-body > .button-block, 
